--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pokedex.js",
   "version": "0.1.0",
+  "homepage": "https://roboe.github.io/pokedex",
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
@@ -11,6 +12,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
