--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "test": "react-scripts test --env=jsdom",
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build",
+    "build-db": "node build-db.js",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0"
+    "fs-extra": "^6.0.0",
+    "gh-pages": "^1.1.0",
+    "request": "^2.85.0",
+    "request-promise-native": "^1.0.5"
   }
 }
